# multi-robot-formation

./: .gitignore  CLAUDE.md  README.md  changes.md  method.md  plan.md  pyproject.toml  scripts_run_pipeline.sh
code/: README.md  auto_research_tick.py  checkpoint.py  contract.py  device_utils.py  env_hallway.py  env_line.py  env_pentagon.py  env_wedge.py  eval.py  eval_hallway.py  eval_hallway_viz.py  hp_search.py  metrics.py  model.py  periodic_eval.py  render_hallway.py  run_demo.py  run_status.py  scripts_run_pipeline.sh  teleop.py  train.py  train_hallway.py
code/scripts/: compare_runs.py
formation_hallway/: CMakeLists.txt  README.md  package.xml
formation_hallway/config/: contract.py
formation_hallway/launch/: hallway.launch
formation_hallway/models/triton/: model.config  model.sdf
formation_hallway/plugins/: CMakeLists.txt  model_push.cc
formation_hallway/policy/: latest.pt
formation_hallway/scripts/: hallway_env_node.py  spawn_hallway_fleet.py  teleop_hallway.py
formation_hallway/worlds/: hallway.world
public/: index.html
public/static/css/: index.css
ros2/limo_circle_sim/: README.md  package.xml  setup.cfg  setup.py
ros2/limo_circle_sim/config/: circle_sim.rviz
ros2/limo_circle_sim/launch/: circle_sim.launch.py
ros2/limo_circle_sim/limo_circle_sim/: circle_node.py  gt_tf_node.py  hallway_node.py  markers_node.py  teleop_node.py
ros2/limo_circle_sim/scripts/: make_fake_checkpoint.py
ros2/limo_circle_sim/urdf/: limo_four_diff.gazebo  limo_four_diff.xacro  limo_steering_hinge.xacro  limo_xacro.xacro
ros2/limo_circle_sim/worlds/: circle_arena.world
tests/: conftest.py  fake_env.py  test_eval_hallway.py  test_fastpath.py  test_formation.py  test_model.py  test_teleop.py  test_train_eval.py
